<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csci448.btessema.calculator.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/display_results"
            android:text="Results will be displayed here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:textSize="24dp"
            android:layout_gravity="end"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <Button
                android:id="@+id/seven_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven_button" />
            <Button
                android:id="@+id/eight_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight_button"/>
            <Button
                android:id="@+id/nine_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine_button"/>
            <Button
                android:id="@+id/divide_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide_button" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <Button
                android:id="@+id/four_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four_button" />
            <Button
                android:id="@+id/five_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five_button"/>
            <Button
                android:id="@+id/six_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six_button"/>
            <Button
                android:id="@+id/multiply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiply_button" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end">
                <Button
                    android:id="@+id/one_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_button"/>
                <Button
                    android:id="@+id/two_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_button"/>
                <Button
                    android:id="@+id/three_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three_button"/>
                <Button
                    android:id="@+id/subtract_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtract_button" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end">

                <Button
                    android:id="@+id/zero_button"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zero_button" />
                <Button
                    android:id="@+id/period_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/period_button"/>
                <Button
                    android:id="@+id/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_button" />
            </LinearLayout>
        <Button
            android:id="@+id/equals_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/equals_button"/>
       </LinearLayout>

</android.support.constraint.ConstraintLayout>
